--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@ db/schema.rb linguist-generated
 
 # Mark the coverage html as having been generated.
 public/coverage/*.* linguist-generated
+public/coverage/**/* linguist-vendored
 
 # Mark any vendored files as having been vendored.
 vendor/* linguist-vendored
