--- a/.gitattributes
+++ b/.gitattributes
@@ -3,8 +3,7 @@
 # Mark the database schema as having been generated.
 db/schema.rb linguist-generated
 
-# Mark the coverage html as having been generated.
-public/coverage/*.* linguist-generated
+public/coverage/* linguist-vendored
 public/coverage/**/* linguist-vendored
 
 # Mark any vendored files as having been vendored.
